# clorag

./: .dockerignore  .env.example  .gitignore  2026-01-02-caveat-the-messages-below-were-generated-by-the-u.txt  CHANGELOG.md  CLAUDE.md  CODEBASE_ANALYSIS.md  CODE_REVIEW_REPORT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_analytics.db  test_clorag.db  token_drafts.json
docs/architecture/: hierarchical-chunking.md
docs/specs/: 2026-03-23-readonly-admin-design.md
docs/superpowers/plans/: 2026-03-20-mcp-hardening.md
docs/superpowers/specs/: 2026-03-20-mcp-hardening-design.md
scripts/: eval_retrieval.py  generate_eval_dataset.py  import_cameras_excel.py  init_secrets.sh  migrate_inline_handlers.py
src/clorag/: __init__.py  config.py  main.py
src/clorag/agent/: __init__.py  prompts.py  tools.py
src/clorag/analysis/: __init__.py  camera_extractor.py  quality_controller.py  rio_analyzer.py  thread_analyzer.py
src/clorag/core/: __init__.py  analytics_db.py  cache.py  cost_calculator.py  database.py  embeddings.py  entity_extractor.py  graph_store.py  ingestion_db.py  messages_db.py  metrics.py  prompt_db.py  reranker.py  retriever.py  settings_db.py  sparse_embeddings.py  support_case_db.py  terminology_db.py  vectorstore.py
src/clorag/drafts/: __init__.py  draft_generator.py  draft_pipeline.py  gmail_service.py  models.py
src/clorag/graph/: __init__.py  enrichment.py  schema.py
src/clorag/ingestion/: __init__.py  base.py  chunker.py  curated_gmail.py  docusaurus.py  gmail.py  local_docs.py
src/clorag/mcp/: README.md  __init__.py  auth.py  prompts.py  resources.py  server.py
src/clorag/mcp/tools/: __init__.py  analytics.py  cameras.py  chunks.py  documents.py  ingestion.py  odoo.py  prompts.py  search.py  settings.py  support.py
src/clorag/models/: __init__.py  camera.py  custom_document.py  support_case.py
src/clorag/scripts/: __init__.py  archive_collection.py  backfill_support_cases.py  draft_support.py  enrich_model_codes.py  enrich_support_cases.py  extract_cameras.py  fix_rio_terminology.py  import_documents.py  ingest_curated.py  ingest_docs.py  ingest_gmail.py  ingest_legacy_docs.py  ingest_local_docs.py  init_prompts.py  init_settings.py  populate_graph.py  rebuild_fts.py  run_web.py  verify_cameras.py
src/clorag/services/: __init__.py  custom_docs.py  default_prompts.py  default_settings.py  ingestion_runner.py  odoo_mcp_client.py  prompt_manager.py  settings_manager.py
src/clorag/utils/: __init__.py  anonymizer.py  logger.py  text_transforms.py  token_encryption.py  tokenizer.py  url_validator.py
src/clorag/web/: __init__.py  app.py  dependencies.py  schemas.py
src/clorag/web/auth/: __init__.py  admin.py  csrf.py  sessions.py
src/clorag/web/routers/: __init__.py  cameras.py  legacy.py  openai_compat.py  pages.py  search.py
src/clorag/web/routers/admin/: __init__.py  analytics.py  auth.py  cameras.py  chunks.py  debug.py  documents.py  drafts.py  graph.py  ingestion.py  messages.py  prompts.py  settings.py  support.py  terminology.py
src/clorag/web/search/: __init__.py  pipeline.py  synthesis.py  utils.py
src/clorag/web/static/css/: admin.css
src/clorag/web/static/js/: admin.js  geometric-bg.js
src/clorag/web/templates/: admin_analytics.html  admin_cameras.html  admin_cameras_list.html  admin_cameras_review.html  admin_chunk_edit.html  admin_chunks.html  admin_docs.html  admin_drafts.html  admin_graph.html  admin_index.html  admin_ingestion.html  admin_knowledge.html  admin_login.html  admin_messages.html  admin_metrics.html  admin_prompts.html  admin_search_debug.html  admin_settings.html  admin_support_cases.html  admin_terminology_fixes.html  ai_lexicon.html  camera_edit.html  cameras.html  cookies.html  help.html  index.html  legacy.html  legacy_help.html  legacy_manage.html  legal.html  privacy.html  terms.html  video.html
src/clorag/web/templates/docs/: api.html  architecture.html  commands.html  content.html  features.html  index.html  ingestion.html  mcp.html  odoo.html  operations.html  retrieval.html  security.html
src/clorag/web/templates/partials/: _cookie_banner.html  _legal_footer.html
src/clorag/web/templates/public_docs/: api.html  architecture.html  content.html  features.html  index.html  mcp.html  (+2 more)
tests/: __init__.py  conftest.py  test_analytics_db.py  test_anonymizer.py  test_chunker.py  test_config.py  test_cost_calculator.py  test_embeddings.py  test_mcp.py  test_messages.py  test_metrics.py  test_openai_compat.py  test_performance_optimizations.py  test_prompt_deduplication.py  test_sparse_embeddings.py  test_synthesis_usage.py  test_web_search.py
